DT-2076  Fix stretched images in menu

--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -226,6 +226,7 @@
 
         .image {
             flex-shrink: 0;
+            object-fit: contain;
         }
     }
 
